--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -55,14 +55,14 @@
               d3.select("h1").html("Loading...")
               d3.select("article").html("Your article is being generated. Come back in 5 minutes!")
 
-              fetch('/unconditional-sample?model_name=' + topic.id + '_headlines&length=10&top_k=10')
+              fetch('/unconditional-sample/' + topic.id + '_headlines/10/5')
                 .then(function (response) {
                     return response.json();
                 }).then(function (headline_json) {
                     console.log('GET response as JSON:');
                     console.log(headline_json); // display text in console
 
-                    fetch('/conditional-sample?prompt=' + headline_json.text + '&model_name=' + topic.id + '_articles&length=100&top_k=25')
+                    fetch('/conditional-sample/' + headline_json.text + '/' + topic.id + '_articles/100/25')
                       .then(function (response) {
                           return response.json();
                       }).then(function (article_json) {
