--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -20,14 +20,20 @@
           }
 
           button {
-            font-family: 'Courier New', Courier, monospace;
+            font-family: 'Courier New';
             margin: 5px 10px;
             padding: 10px 30px;
           }
 
           h1 {
+            padding-top: 40px;
+            font-size: 48px;
+            font-family: Georgia;
+          }
+
+          h2 {
             padding-top: 20px;
-            font-family: Georgia, 'Times New Roman', Times, serif;
+            font-family: Georgia;
           }
 
           .article {
@@ -37,8 +43,8 @@
         </style>
     </head>
     <body>
-        <img src="title.png" alt="title">
-        <h1>Click below to generate a fake news article.</h1>
+        <h1>Fake News Generator</h1>
+        <h2>Click below to generate a fake news article.</h2>
           <button id="blm">Black Lives Matter</button>
           <button id="covid">COVID-19</button>
           <button id="election">2020 Election</button>
